tests/fixtures/positive/style/UseIfInsteadOfWhen.kt
package style

fun example(x: Int): String {
    return when {
        x > 0 -> "pos"
        else -> "neg"
    }
}
