tests/fixtures/negative/empty-blocks/EmptyWhenBlock.kt
package fixtures.negative.emptyblocks

fun classify(x: Int) {
    when (x) {
        1 -> println("one")
    }
}
